--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,54 @@
-alembic==1.12.1
+alembic==1.12.0
+asttokens==2.2.1
+backcall==0.2.0
 bcrypt==4.0.1
 blinker==1.6.3
-certifi==2023.7.22
-charset-normalizer==3.3.1
+certifi==2023.5.7
 click==8.1.7
+decorator==5.1.1
+distlib==0.3.6
+executing==1.2.0
+filelock==3.12.2
 Flask==3.0.0
 Flask-Bcrypt==1.0.1
 Flask-Cors==4.0.0
 flask-marshmallow==0.15.0
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
-idna==3.4
+greenlet==3.0.0
+gunicorn==21.2.0
+importlib-metadata==6.8.0
+importlib-resources==6.1.0
+ipdb==0.13.13
+ipython==8.12.2
 itsdangerous==2.1.2
+jedi==0.18.2
 Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.3
 marshmallow==3.20.1
 marshmallow-sqlalchemy==0.29.0
-numpy==1.26.1
+matplotlib-inline==0.1.6
+numpy==1.24.4
 opencv-python==4.8.1.78
 packaging==23.2
-requests==2.31.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+pipenv==2023.7.4
+platformdirs==3.8.1
+prompt-toolkit==3.0.39
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.15.1
+six==1.16.0
 SQLAlchemy==2.0.22
-typing_extensions==4.8.0
-urllib3==2.0.7
-Werkzeug==3.0.1
+stack-data==0.6.2
+tomli==2.0.1
+traitlets==5.9.0
+typing_extensions==4.7.1
+virtualenv==20.23.1
+virtualenv-clone==0.5.7
+wcwidth==0.2.6
+Werkzeug==3.0.0
+zipp==3.17.0
