--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,8 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "private": true,
-  "proxy": "http://localhost:5000",
+  "private": false,
+  "proxy": "https://gymweb-s9ic.onrender.com/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
