--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-simply-carousel": "^9.1.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
